--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
                         <td>
                             <p class="product">
                                 <a class="images" href="@item.PhotoURL.Replace("200x200", "400x400")" target="_blank">
-                                    @if (item.isPrivate)
+                                    @if (item.IsPrivate)
                                     {
                                         <img style="position:absolute; left: -10px" src="https://cdn0.iconfinder.com/data/icons/security-8/500/lock2-32.png">
                                     }
