--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,11 +13,12 @@
 
     <link rel="stylesheet" type="text/css" href="~/DataTables/datatables.min.css" />
     <script type="text/javascript" src="~/DataTables/datatables.min.js"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajax-unobtrusive/3.2.6/jquery.unobtrusive-ajax.min.js" integrity="sha512-DedNBWPF0hLGUPNbCYfj8qjlEnNE92Fqn7xd3Sscfu7ipy7Zu33unHdugqRD3c4Vj7/yLv+slqZhMls/4Oc7Zg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
 
 
@@ -152,11 +153,12 @@
         <a href="@Url.ActionLink("ListGetir","Home")" class="menu__item menu__item--active" id="listGetir" data-tooltip="Liste getir">
             <i class="bi bi-person-lines-fill"></i>
         </a>
-        <a href="#" class="menu__item" data-tooltip="Geri takip etmeyenler">
-            <i class="bi bi-envelope-fill"></i>
-        </a>
-        <a href="#" class="menu__item" data-tooltip="Mesajları sil">
+
+        <a href="@Url.ActionLink("UnfollowEt","Home")" class="menu__item" data-tooltip="Geri takip etmeyenler">
             <i class="bi bi-person-dash-fill"></i>
+        </a>
+        <a href="#" class="menu__item" data-tooltip="Mesajları Sil">
+            <i class="bi bi-envelope-fill"></i>
         </a>
         <a href="#" class="menu__item" data-tooltip="Settings">
             <i class="bi bi-gear-fill"></i>
